<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_1">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/child_layout_1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    app:layout_constraintStart_toStartOf="@id/child_layout_1"
                    app:layout_constraintTop_toTopOf="@id/child_layout_1"
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="@dimen/heading_2"
                    android:text="@string/profile" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <LinearLayout
                app:layout_constraintTop_toBottomOf="@id/child_layout_1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/margin_1"
                android:id="@+id/child_layout_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name"
                    android:inputType="textPersonName"
                    android:layout_marginBottom="@dimen/margin_2"/>
                <EditText
                    android:id="@+id/last_name"
                    android:inputType="textPersonName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name"
                    android:layout_marginBottom="@dimen/margin_2"/>
                <Spinner
                    android:id="@+id/gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:tooltipText="@string/select_gender"
                    android:paddingVertical="@dimen/padding_2"
                    android:layout_marginBottom="@dimen/margin_2"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="@dimen/margin_2">
                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/_91"
                        android:textStyle="italic"
                        android:textSize="@dimen/sub_heading_1"
                        android:layout_height="wrap_content"/>
                    <EditText
                        android:id="@+id/mobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_3"
                        android:hint="@string/mobile_number"
                        android:inputType="phone"/>
                </LinearLayout>
                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_id"
                    android:inputType="textEmailAddress"
                    android:layout_marginBottom="@dimen/margin_2"
                    />
                <EditText
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address"
                    android:inputType="textMultiLine"
                    android:minHeight="100dp"
                    android:gravity="top|start"
                    android:maxLines="8"
                    android:layout_marginBottom="@dimen/margin_2"
                    />
                <EditText
                    android:id="@+id/city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/city"
                    android:layout_marginBottom="@dimen/margin_2"/>
                <EditText
                    android:id="@+id/pincode"
                    android:inputType="number"
                    android:maxLength="6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pincode"
                    android:layout_marginBottom="@dimen/margin_2"/>
            </LinearLayout>
            <Button
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/child_layout_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:id="@+id/save_btn"
                android:layout_margin="@dimen/margin_1"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</LinearLayout>