<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_1"
    android:id="@+id/parent_layout"
    tools:context=".LoginActivity">
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/infovault"
        android:textAlignment="center"
        android:textSize="@dimen/heading_1"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/child_layout_2"
        app:layout_constraintEnd_toEndOf="@id/parent_layout"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="@id/parent_layout"
        app:layout_constraintTop_toTopOf="@id/parent_layout" />
    <LinearLayout
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintBottom_toBottomOf="@id/parent_layout"
        app:layout_constraintStart_toStartOf="@id/parent_layout"
        app:layout_constraintEnd_toEndOf="@id/parent_layout"
        android:id="@+id/child_layout_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="@dimen/heading_2"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/margin_2"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_id"
            android:id="@+id/et_email"
            android:layout_marginBottom="@dimen/margin_3"
            android:inputType="textEmailAddress"
            />
        <EditText
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_password"
            android:layout_marginBottom="@dimen/margin_3"
            android:inputType="textPassword"
            />
        <TextView
            android:id="@+id/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:layout_gravity="end"
            />
        <Button
            android:id="@+id/btn_login"
            android:layout_marginTop="@dimen/margin_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login"
            />
    </LinearLayout>
    <View
        android:id="@+id/horizontal_line"
        app:layout_constraintTop_toBottomOf="@id/child_layout_2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="@dimen/margin_2"
        android:background="@color/black"/>
    <LinearLayout
        app:layout_constraintTop_toBottomOf="@id/horizontal_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/margin_2"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_to_the_app"/>
        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_marginStart="@dimen/margin_3"
            android:textStyle="bold"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>